<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.project0.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:background="#ffdfeaf1">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"/>
            <Button
                style="@style/Button"
                android:text="@string/projectOne"
                android:onClick="bProjectOne"
                />
            <Button
                style="@style/Button"
                android:text="@string/projectTwo"
                android:onClick="bProjectTwo"/>
            <Button
                style="@style/Button"
                android:text="@string/projectThree"
                android:onClick="bProjectThree"/>
            <Button
                style="@style/Button"
                android:text="@string/projectFour"
                android:onClick="bProjectFour"/>
            <Button
                style="@style/Button"
                android:text="@string/projectFive"
                android:onClick="bProjectFive"/>
            <Button
                style="@style/Button"
                android:text="@string/projectSix"
                android:background="@android:color/holo_red_dark"
                android:onClick="bProjectSix"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
